--- a/.github/workflows/main_proxyserverauth.yml
+++ b/.github/workflows/main_proxyserverauth.yml
@@ -5,24 +5,91 @@ on:
     branches:
       - main
 
+workflow_dispatch:
+
+
+
+
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+
+  build:
+
+    runs-on: windows-latest
+
+
+
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: npm install
 
-    - name: Build the project
-      run: npm run build
+
+
+      - name: Set up Node.js version
+
+        uses: actions/setup-node@v3
+
+        with:
+
+          node-version: '20.x'
+
+
+
+
+      - name: npm install, build, and test
+
+        run: |
+
+          npm install
+
+          npm run build --if-present
+
+          npm run test --if-present
+
+      
+
+      - name: Upload artifact for deployment job
+
+        uses: actions/upload-artifact@v3
+
+        with:
+
+          name: node-app
+
+          path: .
+
+
+
+
+  deploy:
+
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    environment:
+
+      name: 'Production'
+
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    permissions:
+
+      id-token: write #This is required for requesting the JWT
+
+
+
+
+    steps:
+
+      - name: Download artifact from build job
+
+        uses: actions/download-artifact@v3
+
+        with:
+
+          name: node-app
 
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
